[gd_scene load_steps=30 format=2]

[ext_resource path="res://scene/Button/Down_Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/Button/Left_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/Button/Up_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/Box.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/Button/Right_Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://script/stage/stage1.gd" type="Script" id=7]
[ext_resource path="res://scene/FinalState.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/Background.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Wood board.png" type="Texture" id=10]
[ext_resource path="res://assets/Icon/reload.png" type="Texture" id=11]
[ext_resource path="res://assets/UI_Flat_Banner_02_Upward.png" type="Texture" id=12]
[ext_resource path="res://assets/b1_black.png" type="Texture" id=13]
[ext_resource path="res://assets/Icon/home.png" type="Texture" id=14]
[ext_resource path="res://assets/b1.png" type="Texture" id=15]
[ext_resource path="res://assets/Icon/forward.png" type="Texture" id=16]
[ext_resource path="res://assets/Icon/play.png" type="Texture" id=17]
[ext_resource path="res://assets/button-click.mp3" type="AudioStream" id=18]
[ext_resource path="res://scene/DFA/DFA1.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/Interface.png" type="Texture" id=20]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform vec4 line_color : hint_color = vec4(1.0);
uniform float line_thickness : hint_range(0, 10) = 1.0;

const vec2 OFFSETS[8] = {
	vec2(-1, -1), vec2(-1, 0), vec2(-1, 1), vec2(0, -1), vec2(0, 1), 
	vec2(1, -1), vec2(1, 0), vec2(1, 1)
};

void fragment() {
	vec2 size = TEXTURE_PIXEL_SIZE * line_thickness;
	float outline = 0.0;
	
	for (int i = 0; i < OFFSETS.length(); i++) {
		outline += texture(TEXTURE, UV + size * OFFSETS[i]).a;
	}
	outline = min(outline, 1.0);
	
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, line_color, outline - color.a);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 5 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_thickness = 1.0

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform vec4 line_color : hint_color = vec4(1.0);
uniform float line_thickness : hint_range(0, 10) = 1.0;

const vec2 OFFSETS[8] = {
	vec2(-1, -1), vec2(-1, 0), vec2(-1, 1), vec2(0, -1), vec2(0, 1), 
	vec2(1, -1), vec2(1, 0), vec2(1, 1)
};

void fragment() {
	vec2 size = TEXTURE_PIXEL_SIZE * line_thickness;
	float outline = 0.0;
	
	for (int i = 0; i < OFFSETS.length(); i++) {
		outline += texture(TEXTURE, UV + size * OFFSETS[i]).a;
	}
	outline = min(outline, 1.0);
	
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, line_color, outline - color.a);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 6 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_thickness = 1.0

[sub_resource type="Theme" id=13]

[sub_resource type="DynamicFontData" id=17]
antialiased = false
font_path = "res://assets/Daydream.ttf"

[sub_resource type="DynamicFont" id=14]
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 17 )

[sub_resource type="Shader" id=15]
code = "shader_type canvas_item;

uniform vec4 line_color : hint_color = vec4(1.0);
uniform float line_thickness : hint_range(0, 10) = 1.0;

const vec2 OFFSETS[8] = {
	vec2(-1, -1), vec2(-1, -1), vec2(-1, 1), vec2(1, -1), vec2(1, 1), 
	vec2(1, -1), vec2(1, 1), vec2(1, 1)
};

void fragment() {
	vec2 size = TEXTURE_PIXEL_SIZE * line_thickness;
	float outline = 0.0;
	
	for (int i = 0; i < OFFSETS.length(); i++) {
		outline += texture(TEXTURE, UV + size * OFFSETS[i]).a;
	}
	outline = min(outline, 1.0);
	
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, line_color, outline - color.a);
}"

[sub_resource type="ShaderMaterial" id=16]
shader = SubResource( 15 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_thickness = 1.0

[node name="Stage" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" parent="." instance=ExtResource( 9 )]
position = Vector2( 512, 300 )
scale = Vector2( 4, 4 )
frame = 3

[node name="origin_box" type="Node2D" parent="."]
material = SubResource( 2 )
position = Vector2( 528, 550 )
scale = Vector2( 3.7, 3.7 )

[node name="WoodBoard" type="Sprite" parent="origin_box"]
material = SubResource( 4 )
position = Vector2( -0.810822, -3.8147e-06 )
scale = Vector2( 0.975676, 0.975676 )
texture = ExtResource( 10 )

[node name="Up_button" parent="origin_box" instance=ExtResource( 3 )]
position = Vector2( -35.9459, -0.270279 )
scale = Vector2( 0.27027, 0.27027 )

[node name="Right_Button" parent="origin_box" instance=ExtResource( 5 )]
position = Vector2( -12.4324, -1.52588e-05 )
scale = Vector2( 0.27027, 0.27027 )

[node name="Left_button" parent="origin_box" instance=ExtResource( 2 )]
position = Vector2( 34.5946, 3.05176e-05 )
scale = Vector2( 0.27027, 0.27027 )

[node name="Down_button" parent="origin_box" instance=ExtResource( 1 )]
position = Vector2( 10.8108, 3.05176e-05 )
scale = Vector2( 0.27027, 0.27027 )

[node name="Box_stage" type="Node2D" parent="."]

[node name="Box" parent="Box_stage" instance=ExtResource( 4 )]
position = Vector2( 451, 299 )

[node name="Box2" parent="Box_stage" instance=ExtResource( 4 )]
position = Vector2( 528, 298 )

[node name="Box3" parent="Box_stage" instance=ExtResource( 4 )]
position = Vector2( 606, 297 )

[node name="Box" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 369, 296 )

[node name="Final" parent="." instance=ExtResource( 8 )]
position = Vector2( 733, 284 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Home" type="TextureButton" parent="Control"]
margin_left = 811.0
margin_top = 40.0
margin_right = 1002.0
margin_bottom = 96.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
expand = true

[node name="Home" type="Sprite" parent="Control/Home"]
position = Vector2( 30, 33 )
scale = Vector2( 0.050293, 0.050293 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="Control/Home"]
margin_left = 78.0
margin_top = 22.0
margin_right = 182.0
margin_bottom = 79.0
theme = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
text = "HOME
"

[node name="Run" type="TextureButton" parent="Control"]
margin_left = 808.0
margin_top = 440.0
margin_right = 999.0
margin_bottom = 496.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
expand = true

[node name="Home" type="Sprite" parent="Control/Run"]
position = Vector2( 30, 33 )
scale = Vector2( 0.050293, 0.050293 )
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="Control/Run"]
margin_left = 78.0
margin_top = 22.0
margin_right = 182.0
margin_bottom = 79.0
theme = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
text = "RUN"

[node name="retry" type="TextureButton" parent="Control"]
margin_left = 811.0
margin_top = 104.0
margin_right = 1002.0
margin_bottom = 160.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
expand = true

[node name="Reload" type="Sprite" parent="Control/retry"]
position = Vector2( 29, 32 )
scale = Vector2( 0.0625001, 0.0562501 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="Control/retry"]
margin_left = 77.0
margin_top = 21.0
margin_right = 181.0
margin_bottom = 78.0
theme = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
text = "RETRY"

[node name="Next" type="TextureButton" parent="Control"]
margin_left = 808.0
margin_top = 511.0
margin_right = 999.0
margin_bottom = 567.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
expand = true

[node name="Home" type="Sprite" parent="Control/Next"]
position = Vector2( 30, 33 )
scale = Vector2( 0.050293, 0.050293 )
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="Control/Next"]
margin_left = 78.0
margin_top = 22.0
margin_right = 182.0
margin_bottom = 79.0
theme = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
text = "NEXT"

[node name="UiFlatBanner02Upward" type="Sprite" parent="Control"]
position = Vector2( 124, 68 )
scale = Vector2( 2.75, 2.75 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Control"]
margin_left = 54.0
margin_top = 49.0
margin_right = 202.0
margin_bottom = 106.0
theme = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 14 )
text = "Tutorial  1
"

[node name="button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="Interface" type="Sprite" parent="."]
material = SubResource( 16 )
position = Vector2( 175, 296 )
scale = Vector2( 3.43173, 3.43173 )
texture = ExtResource( 20 )

[node name="DFA1" parent="." instance=ExtResource( 19 )]
position = Vector2( 51, 223 )
scale = Vector2( 0.25, 0.25 )

[connection signal="pressed" from="Control/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Control/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="Control/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Control/Next" to="." method="_on_Next_pressed"]
